# twillio_whatsapp_prj

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRACT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
comm_layer/: __init__.py  config.py  db.py  deps.py  logging_config.py  main.py  number_registry.py  outbound.py  rate_limiter.py  transcription.py  twilio_security.py
comm_layer/broker/: __init__.py  azure_servicebus.py  base.py  postgres.py
comm_layer/contracts/: __init__.py  base.py  enriched.py  sms.py  voice.py  whatsapp.py
comm_layer/media_streams/: __init__.py
comm_layer/media_streams/transcribers/: __init__.py
comm_layer/webhooks/: __init__.py  ingest.py  responses.py  sms.py  status.py  voice.py  whatsapp.py
dashboard/: __init__.py  db.py  main.py
dashboard/views/: delivery.py  feed.py  search.py  stats.py
delivery_worker/: __init__.py  hubspot_client.py  main.py  replay.py  transform.py
docs/: supabase_setup.md
intelligence_layer/: __init__.py  business_context.md  consumer.py  embedding.py  enrichment.py  main.py  prompt_guard.py  search.py  transcription.py  whatsapp_reply.py
migrations/: 0001_extensions.sql  0002_number_registry.sql  0003_comm_events.sql  0004_transcripts_enrichments.sql  0005_embeddings.sql  0006_delivery_log.sql  0007_enrichment_unique.sql  0008_enrichment_embedding_status.sql  0009_hubspot_contact_id.sql  0010_enrichment_lease.sql  0011_ai_kill_switch.sql  0012_whatsapp_replies.sql  0013_hubspot_crm_objects.sql  0014_hubspot_task_id.sql
mock_azure_crm/: __init__.py  main.py
scripts/: replay_dlq.py  simulate_call.py  simulate_whatsapp.py  toggle_azure.py
seeds/: number_registry_seed.sql
tests/: conftest.py
tests/fixtures/: twilio_fixtures.py
tests/integration/: conftest.py  test_delivery.py  test_embedding.py  test_enrichment.py  test_ingest.py  test_search.py
tests/unit/: test_broker.py  test_contracts.py  test_delivery_worker.py  test_embedding.py  test_enrichment.py  test_hubspot_client.py  test_mock_azure_crm.py  test_outbound.py  test_prompt_guard.py  test_replay_dlq.py  test_search.py  test_signature.py  test_transcription.py  test_transform.py  test_webhooks.py  test_whatsapp_reply.py
